--- a/lib/bower.json
+++ b/lib/bower.json
@@ -17,8 +17,8 @@
     "handlebars": "~3.0.3",
     "jquery": "~2.1.4",
     "lodash": "~3.10.1",
+    "q": "1.0.1",
     "require-handlebars-plugin": "~0.11.3",
-    "requirejs": "~2.1.20",
-    "q": "~1.0.1"
+    "requirejs": "~2.1.20"
   }
 }
